--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,5 @@ pandas==2.2.0
 requests==2.31.0
 gunicorn==21.2.0
 beautifulsoup4==4.12.3
-selenium==4.18.1
 lxml==5.1.0
-tabula-py==2.9.0
+PyJWT==2.8.0
