--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ flask==3.0.0
 flask-cors==6.0.2
 pdfplumber==0.11.0
 python-docx==1.1.0
-pandas==2.2.0
+pandas>=2.2.3
 requests==2.31.0
 gunicorn==21.2.0
 beautifulsoup4==4.12.3
