--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,8 @@
-anthropic==0.39.0
-pyairtable==2.3.3
-python-dotenv==1.0.0
-flask==3.0.0
-flask-cors==6.0.2
-pdfplumber==0.11.0
-python-docx==1.1.0
-pandas>=2.2.3
-requests==2.31.0
-gunicorn==21.2.0
-beautifulsoup4==4.12.3
-lxml==5.1.0
-PyJWT==2.8.0
+anthropic
+pyairtable
+python-dotenv
+flask
+flask-cors
+requests
+gunicorn
+PyJWT
