--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-anthropic==0.39.0
-pyairtable==2.3.3
-python-dotenv==1.0.0
-flask==3.0.0
-flask-cors==4.0.0
-requests==2.31.0
-gunicorn==21.2.0
-PyJWT==2.8.0
+anthropic
+pyairtable
+python-dotenv
+flask
+flask-cors
+requests
+PyJWT
