Add PythonAnywhere deployment option
Added comprehensive PythonAnywhere deployment documentation:
- Complete deployment guide with step-by-step instructions
- Quick start guide for fast 15-minute deployment
- Backend comparison guide (PythonAnywhere vs Render)
- Updated DEPLOY_NOW.md to include both backend options
- Updated netlify.toml with clearer backend URL instructions

Users can now choose between:
- PythonAnywhere: $5/month, more control, SSH access
- Render: $7/month, auto-deploy, less hands-on

Both options fully documented and ready to use.

--- a/nexus-frontend/netlify.toml
+++ b/nexus-frontend/netlify.toml
@@ -12,7 +12,10 @@
   status = 200
 
 [context.production.environment]
-  REACT_APP_API_BASE = "https://your-backend-app.onrender.com"
+  # UPDATE THIS with your actual backend URL:
+  # PythonAnywhere: https://yourusername.pythonanywhere.com
+  # Render: https://your-backend-app.onrender.com
+  REACT_APP_API_BASE = "https://your-backend-url-here.com"
 
 [context.deploy-preview.environment]
-  REACT_APP_API_BASE = "https://your-backend-app.onrender.com"
+  REACT_APP_API_BASE = "https://your-backend-url-here.com"
