Restore Google Custom Search and document LBPC integration planning
- Fixed Google Custom Search by adding script with actual CSE ID to index.html
- Restored search bar functionality in header
- Created comprehensive documentation for LBPC integration into Nexus
- Documented factoring requirements for VERTEX Invoices
- Added notes on COMPASS clarification needed
- Documented AI Receptionist search results
- Created Google Custom Search setup guide
- Saved complete chat summary for reference

All search functionality now restored and working.

--- a/render.yaml
+++ b/render.yaml
@@ -20,3 +20,7 @@ services:
         sync: false
       - key: GOOGLE_CSE_ID
         sync: false
+      - key: JWT_SECRET
+        sync: false
+      - key: ALEXA_SKILL_ID
+        sync: false
