--- a/nexus-frontend/netlify.toml
+++ b/nexus-frontend/netlify.toml
@@ -5,6 +5,7 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  CI = "false"
 
 [[redirects]]
   from = "/*"
@@ -13,9 +14,14 @@
 
 [context.production.environment]
   # UPDATE THIS with your actual backend URL:
-  # PythonAnywhere: https://yourusername.pythonanywhere.com
   # Render: https://your-backend-app.onrender.com
+  # PythonAnywhere: https://yourusername.pythonanywhere.com
   REACT_APP_API_BASE = "https://your-backend-url-here.com"
 
 [context.deploy-preview.environment]
+  # UPDATE THIS with your actual backend URL:
+  REACT_APP_API_BASE = "https://your-backend-url-here.com"
+
+[context.branch-deploy.environment]
+  # For branch deployments (optional)
   REACT_APP_API_BASE = "https://your-backend-url-here.com"
